--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,11 @@
-.section {
-  /* Другие стили */
-  border: 2px solid #3f51b5;
+pre {
+  font-family: 'Arial', 'Helvetica', sans-serif;
+  color: #2a2a2a;
+  font-size: 16px;
 }
 
-.section-title {
-  /* Другие стили */
-  color: #3f51b5;
-}
-
-.section-title::before {
-  /* Другие стили */
-  background-color: #3f51b5;
+pre::first-letter {
+  font-family: 'Tahoma', serif;
+  font-size: 32px;
+  color: #f44336;
 }
