--- a/css/styles.css
+++ b/css/styles.css
@@ -4,47 +4,30 @@
 
 body {
   margin: 0;
-  font-family: sans-serif;
-  line-height: 1.5;
-  background-color: #edf2f7;
-}
-
-.container {
-  max-width: 1200px;
-  padding: 5px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.card-set {
+  min-height: 100vh;
+  background-color: #f9f9fd;
   display: flex;
-  /* Делаем Flex-контейнет многострочным */
-  flex-wrap: wrap;
-  /* Компенсируем маржины элементов */
-  margin-left: -10px;
-  margin-top: -10px;
-  padding: 0;
-  list-style: none;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
 }
 
-.item {
-  padding: 10px;
-  /* Задаём всем элементам маржины слева и сверху */
-  margin-left: 10px;
-  margin-top: 10px;
-  /*  Задаём ширину элементов  */
-  flex-basis: calc((100% - 30px) / 3);
-  background-color: #fff;
+.post {
+  max-width: 600px;
+  padding: 20px;
   border-radius: 4px;
-  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
-    0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  line-height: 1.5;
+  font-family: sans-serif;
+  background-color: #fff;
+
+  box-shadow: 0 2.8px 2.2px rgba(243, 10, 10, 0.034), 0 6.7px 5.3px rgba(119, 15, 15, 0.048),
+    0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+    0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(14, 192, 88, 0.12);
 }
 
-.item h2 {
+.post-title {
   margin-top: 0;
-  font-size: 20px;
 }
-
-.item p {
-  margin: 0;
+.post-text {
+  margin-bottom: 0;
 }
