--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,28 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
+  font-family: sans-serif;
+  line-height: 1.5;
+}
+
+.chat-button {
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+
+  display: inline-block;
+  width: 64px;
+  height: 64px;
+
   margin: 0;
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #f9f9fd;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+
+  background-image: url('https://cdn-icons-png.flaticon.com/512/1653/1653630.png');
+  background-size: contain;
+
+  cursor: pointer;
 }
