--- a/css/styles.css
+++ b/css/styles.css
@@ -1,28 +1,138 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
-  font-family: sans-serif;
-  line-height: 1.5;
+  font-family: 'Roboto', sans-serif;
 }
 
-.chat-button {
-  position: fixed;
-  right: 30px;
-  bottom: 30px;
-
-  display: inline-block;
-  width: 64px;
-  height: 64px;
-
+ul,
+ol {
   margin: 0;
-  padding: 0;
-  border: none;
-  background-color: transparent;
+  padding-left: 0;
+}
 
-  background-image: url('https://cdn-icons-png.flaticon.com/512/1653/1653630.png');
-  background-size: contain;
-
+a,
+button {
   cursor: pointer;
+}
+
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.section {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+/* ---TEST BTN--- */
+
+.btn-test {
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  border: none;
+  margin: 0;
+  padding: 20px 40px;
+  border-radius: 4px;
+  background-color: teal;
+  color: white;
+  border: 2px solid red;
+
+  overflow: hidden;
+
+  transition: background-color 500ms cubic-bezier(0.17, 0.67, 0.83, 0.67),
+    border 500ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
+}
+
+.btn-test:hover {
+  background-color: yellow;
+  border: 2px solid black;
+}
+
+.btn-test::after {
+  content: '';
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-color: red;
+  margin-left: 6px;
+  transition: transform 500ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
+}
+
+.btn-test:hover::after {
+  transform: translateY(-42px);
+}
+
+.btn-test::before {
+  position: absolute;
+  top: 50%;
+  right: 34px;
+  content: '';
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-color: black;
+  margin-right: 6px;
+  transform: translateY(calc(-50% + 42px));
+  transition: transform 500ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
+}
+
+.btn-test:hover::before {
+  transform: translateY(-50%);
+}
+
+/* ---МЕНЮ С ПОДЧЕРКИВАНИЕМ--- */
+
+.menu {
+  display: flex;
+}
+
+.menu-item {
+  list-style: none;
+}
+
+.menu-item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.menu-link {
+  position: relative;
+
+  text-decoration: none;
+  display: block;
+  padding: 10px 20px;
+  color: currentColor;
+  transition: color 250ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
+}
+
+.menu-link:hover {
+  color: red;
+}
+
+.menu-link::after {
+  content: '';
+
+  position: absolute;
+  left: 0;
+  bottom: 0;
+
+  display: block;
+  width: 100%;
+  height: 5px;
+  background-color: red;
+  border-radius: 4px;
+
+  opacity: 0;
+  /* transform: scaleX(0); */
+  /* transform: translateY(0px); */
+  /* transform: skewX(0); */
+  transition: opacity 250ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
+}
+
+.menu-link:hover::after {
+  opacity: 1;
+  /* transform: scaleX(1); */
+  /* transform: translateY(-4px); */
+  /* transform: skewX(45deg); */
 }
