--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@ button {
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+  background-color: antiquewhite;
 }
 
 .section {
@@ -136,3 +137,5 @@ button {
   /* transform: translateY(-4px); */
   /* transform: skewX(45deg); */
 }
+
+/* -----ФОРМЫ----- */
